--- a/q1.md
+++ b/q1.md
@@ -1,3 +1,3 @@
-|    Practice    |  Language    ||    Courses   |   Language   |
-| ---------------|:------------:||-------------:|-------------:|
-| HACKER RANK    |              ||              |              |                       
+|    Practice    |  Language    |    Courses   |   Language   |
+| ---------------|:------------:|-------------:|-------------:|
+| HACKER RANK    |              |              |              |                       
