--- a/q1.md
+++ b/q1.md
@@ -1,3 +1,4 @@
 |    Practice    |  Language    |    Courses   |   Language   |
 | ---------------|:------------:|-------------:|-------------:|
 | HACKER RANK    |              |              |              |                       
+| 1. Pracice / C++ | CPP | | |      
