--- a/q1.md
+++ b/q1.md
@@ -1,4 +1,5 @@
 |    Practice    |  Language    |    Courses   |   Language   |
 | ---------------|:------------:|-------------:|-------------:|
 | HACKER RANK    |              |              |              |                       
-| 1. Pracice / C++ | CPP | | |      
+| 1. Practice / C++ | CPP | | |
+| 1.1. Introduction | | | |
