--- a/q1.md
+++ b/q1.md
@@ -3,3 +3,9 @@
 | HACKER RANK    |              |              |              |                       
 | 1. Practice / C++ | CPP | | |
 | 1.1. Introduction | | | |
+| 1.2. Strings | | | |
+| 1.3. Classes | | | |
+| 1.4. Inheritance | | | |
+| 1.5. Debugging | | | |
+| 1.6. Other concepts | | | |
+| 1.7. STL | | | |
