--- a/q1.md
+++ b/q1.md
@@ -1,7 +1,7 @@
 |    Practice    |  Language    |    Courses   |   Language   |
 | ---------------|:------------:|-------------:|-------------:|
-| HACKER RANK    |              |              |              |                       
-| 1. Practice / C++ | CPP | | |
+| **HACKER RANK**    |              |              |              |                       
+| 1. `Practice / C++` | CPP | | |
 | 1.1. Introduction | | | |
 | 1.2. Strings | | | |
 | 1.3. Classes | | | |
