--- a/q1.md
+++ b/q1.md
@@ -1,12 +1,21 @@
-|    Practice    |  Language    |    Courses   |   Language   |
-| ---------------|:------------:|-------------:|-------------:|
-| **HACKER RANK**    |              |              |              |                       
-| 1. `Practice / C++` | CPP | | |
-| 1.1. Introduction | | | |
-| 1.2. Strings | | | |
-| 1.3. Classes | | | |
-| 1.4. Inheritance | | | |
-| 1.5. Debugging | | | |
-| 1.6. Other concepts | | | |
-| 1.7. STL | | | |
-| 2. `Practice / Datastructures`| CPP | | |
+|    Practice    |  Language    |    
+| ---------------|:------------:|
+| **HACKER RANK**    |          |                           
+| 1. `Practice / C++` | CPP | 
+| 1.1. Introduction | | 
+| 1.2. Strings | | 
+| 1.3. Classes | | 
+| 1.4. Inheritance | |
+| 1.5. Debugging | |
+| 1.6. Other concepts | |
+| 1.7. STL | | 
+| 2. `Practice / Datastructures`| CPP | 
+| 3. `Practice / Algorithms` | CPP | 
+| 4. `30 Days of Code` | CPP | 
+| 5. `Project Euler +`| CPP | 
+| 6. `Interview prep kit`| CPP | 
+| 7. `Practice / SQL`| MySQL | 
+| 8. `Practice / Databases`| | 
+| 9. `Practice / Java` | Java |
+| 10. `Practice / C`| C|
+| 11. `Practice / Python` | Python |
