--- a/q1.md
+++ b/q1.md
@@ -17,5 +17,13 @@
 | 7. `Practice / SQL`| MySQL | 
 | 8. `Practice / Databases`| | 
 | 9. `Practice / Java` | Java |
+| 9.1. Introduction | |
+| 9.2. Strings | |
+| 9.3. BigNumber | |
+| 9.4. Data Structures | |
+| 9.5. OOP | |
+| 9.6. Exception Handling | |
+| 9.7. Advanced | |
+
 | 10. `Practice / C`| C|
 | 11. `Practice / Python` | Python |
