--- a/q1.md
+++ b/q1.md
@@ -24,6 +24,10 @@
 | 9.5. OOP | |
 | 9.6. Exception Handling | |
 | 9.7. Advanced | |
-
 | 10. `Practice / C`| C|
+| 10.1. Introduction | |
+| 10.2. Conditionals and Loops | |
+| 10.3. Arrays and Strings| |
+| 10.4. Functions | |
+| 10.5. Structs and Enums | |
 | 11. `Practice / Python` | Python |
