--- a/q1.md
+++ b/q1.md
@@ -1,7 +1,7 @@
 |    Practice    |  Language    |    
 | ---------------|:------------:|
 | **HACKER RANK**    |          |                           
-| 1. `Practice / C++` | CPP | 
+| 1. [`Practice / C++`](https://github.com/debacoding/1.CPP) | CPP | 
 | 1.1. Introduction | | 
 | 1.2. Strings | | 
 | 1.3. Classes | | 
@@ -14,9 +14,9 @@
 | 4. `30 Days of Code` | CPP | 
 | 5. `Project Euler +`| CPP | 
 | 6. `Interview prep kit`| CPP | 
-| 7. `Practice / SQL`| MySQL | 
-| 8. `Practice / Databases`| | 
-| 9. `Practice / Java` | Java |
+| 7. [`Practice / SQL`](https://github.com/debacoding/5.SQL)| MySQL | 
+| 8. [`Practice / Databases`](https://github.com/debacoding/5.SQL)| | 
+| 9. [`Practice / Java`](https://github.com/debacoding/6.JAVA) | Java |
 | 9.1. Introduction | |
 | 9.2. Strings | |
 | 9.3. BigNumber | |
@@ -24,7 +24,7 @@
 | 9.5. OOP | |
 | 9.6. Exception Handling | |
 | 9.7. Advanced | |
-| 10. `Practice / C`| C|
+| 10. [`Practice / C`](https://github.com/debacoding/3.C)| C|
 | 10.1. Introduction | |
 | 10.2. Conditionals and Loops | |
 | 10.3. Arrays and Strings| |
