--- a/q1.md
+++ b/q1.md
@@ -1,7 +1,7 @@
-|    Practice    |  Language    |    
+|    Practice    |  Language    |     | Course | Language |   
 | ---------------|:------------:|
 | **HACKER RANK**    |          |                           
-| 1. #[`Practice / C++`](https://github.com/debacoding/1.CPP) | CPP | 
+| 1. [`Practice / C++`](https://github.com/debacoding/1.CPP) | CPP | 
 | 1.1. Introduction | | 
 | 1.2. Strings | | 
 | 1.3. Classes | | 
@@ -30,4 +30,25 @@
 | 10.3. Arrays and Strings| |
 | 10.4. Functions | |
 | 10.5. Structs and Enums | |
-| 11. `Practice / Python` | Python |
+| 11. [`Practice / Python`](https://github.com/debacoding/7.PYTHON) | Python |
+| **HACKER EARTH ** | |
+| 1. `Start Online Programming` | CPP |
+| 2. `Basic Programming` | CPP |
+| 2.1. Basics of I/O | |
+| 2.2. Basics of Implementation | |
+| 2.3. Basics of Operators | |
+| 2.4. Recursion and Backtracking | |
+| 2.5. Basics of Bit Manipulation | |
+| 3. `Data structures` | CPP |
+| 3.1. Arrays | |
+| 3.2. Stacks | |
+| 3.3. Queues | |
+| 3.4. Hash tables | |
+| 3.5. Linked list | | 
+| 3.6. Trees | |
+| 3.7. Advanced DS | |
+| 3.8. Disjoint DS | |
+| 4. `Algorithms` | CPP |
+| 5. `Maths` | CPP |
+| **GEEKS FOR GEEKS** | |
+| 1. Arrays | |
