--- a/q1.md
+++ b/q1.md
@@ -1,4 +1,4 @@
-|    Practice    |  Language    |     | Course | Language |   
+|    Practice    |  Language    |       
 | ---------------|:------------:|
 | **HACKER RANK**    |          |                           
 | 1. [`Practice / C++`](https://github.com/debacoding/1.CPP) | CPP | 
