--- a/q1.md
+++ b/q1.md
@@ -1,7 +1,7 @@
 |    Practice    |  Language    |       
 | ---------------|:------------:|
 | **HACKER RANK**    |          |                           
-| 1. [`Practice / C++`](https://github.com/debacoding/1.CPP) | CPP | 
+| 1. [`Practice / C++`](https://github.com/debacoding/1.CPP/tree/main/Practice%20Problems/HACKERRANK) | CPP | 
 | 1.1. Introduction | | 
 | 1.2. Strings | | 
 | 1.3. Classes | | 
@@ -11,9 +11,9 @@
 | 1.7. STL | | 
 | 2. `Practice / Datastructures`| CPP | 
 | 3. `Practice / Algorithms` | CPP | 
-| 4. `30 Days of Code` | CPP | 
-| 5. `Project Euler +`| CPP | 
-| 6. `Interview prep kit`| CPP | 
+| 4. [`30 Days of Code`](https://github.com/debacoding/1.CPP/tree/main/Practice%20Problems/HACKERRANK%2030%20Days%20of%20Code) | CPP | 
+| 5. [`Project Euler +`](https://github.com/debacoding/1.CPP/tree/main/Practice%20Problems/HACKER%20RANK%20Project%20Euler%20%2B)| CPP | 
+| 6. [`Interview prep kit`](https://github.com/debacoding/1.CPP/tree/main/Practice%20Problems/HACKERRANK%20Interview%20Preparation%20Kit)| CPP | 
 | 7. [`Practice / SQL`](https://github.com/debacoding/5.SQL)| MySQL | 
 | 8. [`Practice / Databases`](https://github.com/debacoding/5.SQL)| | 
 | 9. [`Practice / Java`](https://github.com/debacoding/6.JAVA) | Java |
@@ -32,8 +32,8 @@
 | 10.5. Structs and Enums | |
 | 11. [`Practice / Python`](https://github.com/debacoding/7.PYTHON) | Python |
 | **HACKER EARTH** | |
-| 1. `Start Online Programming` | CPP |
-| 2. `Basic Programming` | CPP |
+| 1. [`Start Online Programming`](https://github.com/debacoding/1.CPP/tree/main/Practice%20Problems/HACKEREARTH/Start%20Online%20Programming) | CPP |
+| 2. [`Basic Programming`](https://github.com/debacoding/1.CPP/tree/main/Practice%20Problems/HACKEREARTH/Basic%20Programming) | CPP |
 | 2.1. Basics of I/O | |
 | 2.2. Basics of Implementation | |
 | 2.3. Basics of Operators | |
@@ -52,3 +52,4 @@
 | 5. `Maths` | CPP |
 | **GEEKS FOR GEEKS** | |
 | 1. Arrays | |
+| 2. Vector | |
