--- a/q1.md
+++ b/q1.md
@@ -1,6 +1,6 @@
 |    Practice    |  Language    |       
 | ---------------|:------------:|
-| **HACKER RANK**    |          |                           
+| **HACKER RANK (HR)**    |          |                           
 | 1. [`Practice / C++`](https://github.com/debacoding/1.CPP/tree/main/Practice%20Problems/HACKERRANK) | CPP | 
 | 1.1. Introduction | | 
 | 1.2. Strings | | 
@@ -31,7 +31,7 @@
 | 10.4. Functions | |
 | 10.5. Structs and Enums | |
 | 11. [`Practice / Python`](https://github.com/debacoding/7.PYTHON) | Python |
-| **HACKER EARTH** | |
+| **HACKER EARTH (HE)** | |
 | 1. [`Start Online Programming`](https://github.com/debacoding/1.CPP/tree/main/Practice%20Problems/HACKEREARTH/Start%20Online%20Programming) | CPP |
 | 2. [`Basic Programming`](https://github.com/debacoding/1.CPP/tree/main/Practice%20Problems/HACKEREARTH/Basic%20Programming) | CPP |
 | 2.1. Basics of I/O | |
@@ -50,6 +50,19 @@
 | 3.8. Disjoint DS | |
 | 4. `Algorithms` | CPP |
 | 5. `Maths` | CPP |
-| **GEEKS FOR GEEKS** | |
+| **GEEKS FOR GEEKS (GFG)** | |
 | 1. Arrays | |
 | 2. Vector | |
+
+| Course | Language |
+| -------|:--------:|
+| **CODING NINJAS (CN)** | |
+| 1. [`Guided Path / Basics of C++`](https://github.com/debacoding/1.CPP/tree/main/Practice%20Problems/CODING%20NINJAS) | CPP |
+| 1.1. Arrays | |
+| 1.2. Conditional statements and loops | |
+| 1.3. Function | |
+| 1.4. I/O | |
+| 1.5. OOP | |
+| 1.6. Strings | |
+| 2. [`Guided Path / DSA`](https://github.com/debacoding/1.CPP/tree/main/Practice%20Problems/CODING%20NINJAS) | CPP |
+| 3. [`Guided Path / Competitive programming`](https://github.com/debacoding/1.CPP/tree/main/Practice%20Problems/CODING%20NINJAS) | CPP |
