--- a/001. Array.md
+++ b/001. Array.md
@@ -1,7 +1,8 @@
 <h1 align="center"><a href="#"> Reverse an array </a></h1>
 
 ```cpp
-void rvereseArray(int arr[], int start, int end)
+/* Function to reverse arr[] from start to end*/
+void revereseArray(int arr[], int start, int end)
 {
     while (start < end)
     {
@@ -12,4 +13,21 @@ void rvereseArray(int arr[], int start, int end)
         end--;
     }
 }    
+```
+
+<h1 align="center"><a href="#"> Left Rotate an array by d </a></h1>
+
+```cpp
+/* Function to left rotate arr[] of size n by d */
+void leftRotate(int arr[], int d, int n)
+{
+    if (d == 0)
+        return;
+    // in case the rotating factor is greater than array length
+    d = d % n;
+  
+    reverseArray(arr, 0, d - 1);
+    reverseArray(arr, d, n - 1);
+    reverseArray(arr, 0, n - 1);
+}
 ```
