--- a/001. Array.md
+++ b/001. Array.md
@@ -2,7 +2,7 @@
 
 ```cpp
 /* Function to reverse arr[] from start to end*/
-void revereseArray(int arr[], int start, int end)
+void reverseArray(int arr[], int start, int end)
 {
     while (start < end)
     {
