--- a/001. Array.md
+++ b/001. Array.md
@@ -31,3 +31,16 @@ void leftRotate(int arr[], int d, int n)
     reverseArray(arr, 0, n - 1);
 }
 ```
+
+<h1 align="center"><a href="#"> Cyclically Rotate an array by 1 </a></h1>
+
+```cpp
+void rotate(int arr[], int n)
+{
+    int start = 0, end = n-1; // start and end pointing to first and last element respectively
+      while(start != end){
+      swap(arr[start], arr[end]);
+      start++;
+    }
+}
+```
