--- a/001. Array.md
+++ b/001. Array.md
@@ -35,7 +35,7 @@ void leftRotate(int arr[], int d, int n)
 <h1 align="center"><a href="#"> Cyclically Rotate an array by 1 </a></h1>
 
 ```cpp
-void rotate(int arr[], int n)
+void cyclicRotate(int arr[], int n)
 {
     int start = 0, end = n-1; // start and end pointing to first and last element respectively
       while(start != end){
