--- a/001. Array.md
+++ b/001. Array.md
@@ -61,8 +61,7 @@ void cyclicRotate(int arr[], int n)
 ``` 
 
 ```cpp
-// Returns index of key in arr[l..h] if
-// key is present, otherwise returns -1
+// Returns index of key in arr[l..h] if key is present, otherwise returns -1
 int search(int arr[], int l, int h, int key)
 {
     if (l > h)
@@ -93,3 +92,30 @@ int search(int arr[], int l, int h, int key)
     return search(arr, l, mid - 1, key);
 }
 ```
+
+<h1 align="center"><a href="#"> Check if array has a pair of elements equal to a given sum </a></h1>
+
+```cpp
+// Function to check if array has 2 element whose sum is equal to the given value
+bool hasArrayTwoCandidates(int A[], int arr_size, int sum)
+{
+    int l, r;
+ 
+    /* Sort the elements */
+    sort(A, A + arr_size);
+ 
+    /* Now look for the two candidates in the sorted array*/
+    l = 0;
+    r = arr_size - 1;
+    while (l < r) {
+        if (A[l] + A[r] == sum)
+            return 1;
+        else if (A[l] + A[r] < sum)
+            l++;
+        else // A[i] + A[j] > sum
+            r--;
+    }
+    return 0;
+}
+```
+
