--- a/001. Array.md
+++ b/001. Array.md
@@ -119,3 +119,37 @@ bool hasArrayTwoCandidates(int A[], int arr_size, int sum)
 }
 ```
 
+<h1 align="center"><a href="#"> Find maximum value of Sum( i*arr[i]) with only rotations on given array allowed </a></h1>
+
+```cpp
+int maxSum(int arr[], int n)
+{
+    // Compute sum of all array elements
+    int arrSum = 0;
+    for (int i=0; i<n; i++)
+        arrSum += arr[i];
+ 
+    // Compute sum of i*arr[i] for initial configuration.
+    int curr_val = 0;
+    for (int i=0; i<n; i++)
+        curr_val += i*arr[i];
+ 
+    // Initialize result
+    int res = curr_val;
+ 
+    // Compute values for other iterations
+    for (int i=1; i<n; i++)
+    {
+        // Compute next value using previous value in O(1) time
+        int next_val = curr_val - (arrSum - arr[i-1]) + arr[i-1] * (n-1);
+ 
+        // Update current value
+        curr_val = next_val;
+ 
+        // Update result if required
+        res = max(res, next_val);
+    }
+ 
+    return res;
+}
+```
