--- a/001. Array.md
+++ b/001. Array.md
@@ -153,3 +153,38 @@ int maxSum(int arr[], int n)
     return res;
 }
 ```
+
+<h1 align="center"><a href="#"> Find the Rotation Count in Rotated Sorted array </a></h1>
+
+```cpp
+// Returns count of rotations for an array which is first sorted in ascending order, then rotated
+int countRotations(int arr[], int low, int high)
+{
+    // This condition is needed to handle the case  when the array is not rotated at all
+    if (high < low)
+        return 0;
+ 
+    // If there is only one element left
+    if (high == low)
+        return low;
+ 
+    // Find mid
+    int mid = (low + high)/2;
+ 
+    // Check if element (mid+1) is minimum element.
+    // Consider the cases like {3, 4, 5, 1, 2}
+    if (mid < high && arr[mid+1] < arr[mid])
+       return (mid+1);
+ 
+    // Check if mid itself is minimum element
+    if (mid > low && arr[mid] < arr[mid - 1])
+       return mid;
+ 
+    // Decide whether we need to go to left half or right half
+    if (arr[high] > arr[mid])
+       return countRotations(arr, low, mid-1);
+ 
+    return countRotations(arr, mid+1, high);
+}
+ 
+```
