--- a/001. Array.md
+++ b/001. Array.md
@@ -119,7 +119,7 @@ bool hasArrayTwoCandidates(int A[], int arr_size, int sum)
 }
 ```
 
-<h1 align="center"><a href="#"> Find maximum value of Sum( i*arr[i]) with only rotations on given array allowed </a></h1>
+<h1 align="center"><a href="#"> Maximum value of Sum( i*arr[i]) with only rotations on given array allowed </a></h1>
 
 ```cpp
 int maxSum(int arr[], int n)
@@ -154,10 +154,10 @@ int maxSum(int arr[], int n)
 }
 ```
 
-<h1 align="center"><a href="#"> Find the Rotation Count in Rotated Sorted array </a></h1>
+<h1 align="center"><a href="#"> Rotation Count in Rotated Sorted array </a></h1>
 
 ```cpp
-// Returns count of rotations for an array which is first sorted in ascending order, then rotated
+// Returns count of rotations for an array which is first sorted in ascending order, then rotated {using binary search}
 int countRotations(int arr[], int low, int high)
 {
     // This condition is needed to handle the case  when the array is not rotated at all
@@ -171,8 +171,7 @@ int countRotations(int arr[], int low, int high)
     // Find mid
     int mid = (low + high)/2;
  
-    // Check if element (mid+1) is minimum element.
-    // Consider the cases like {3, 4, 5, 1, 2}
+    // Check if element (mid+1) is minimum element. Consider the cases like {3, 4, 5, 1, 2}
     if (mid < high && arr[mid+1] < arr[mid])
        return (mid+1);
  
@@ -187,4 +186,34 @@ int countRotations(int arr[], int low, int high)
     return countRotations(arr, mid+1, high);
 }
  
+```
+
+<h1 align="center"><a href="#"> Minimum element in a sorted and rotated array </a></h1>
+
+```cpp
+int findMin(int arr[], int low, int high)
+{
+    // This condition is needed to handle the case when array is not rotated at all
+    if (high < low) return arr[0];
+ 
+    // If there is only one element left
+    if (high == low) return arr[low];
+ 
+    // Find mid
+    int mid = (low + high)/2;
+ 
+    // Check if element (mid+1) is minimum element. Consider the cases like {3, 4, 5, 1, 2}
+    if (mid < high && arr[mid + 1] < arr[mid])
+    return arr[mid + 1];
+ 
+    // Check if mid itself is minimum element
+    if (mid > low && arr[mid] < arr[mid - 1])
+    return arr[mid];
+ 
+    // Decide whether we need to go to left half or right half
+    if (arr[high] > arr[mid])
+          return findMin(arr, low, mid - 1);
+          
+    return findMin(arr, mid + 1, high);
+}
 ```
